Tried to fix the horizontal scrolling

--- a/css/resume.css
+++ b/css/resume.css
@@ -6,12 +6,17 @@
 body {
   font-family: 'Open Sans', serif;
   padding-top: 54px;
-  color: #868e96; }
+  color: #868e96; 
+  overflow-x: hidden !important;
+}
 
 @media (min-width: 992px) {
   body {
     padding-top: 0;
-    padding-left: 17rem; } }
+    padding-left: 17rem; 
+    overflow-x: hidden !important;
+  } 
+}
 
 h1,
 h2,
